# simple_3d_engine

./: CMakeLists.txt
CodeLoader/: CodeLoader.bpr  CodeLoader.cpp  MainWnd.cpp  MainWnd.dfm  MainWnd.h
Core/: Core.bpr  ENCore2D.h  ENCoreCollision.cpp  ENCoreCollision.h  ENCoreConfig.cpp  ENCoreConfig.h  ENCoreDepthBuffer.h  ENCoreGL.cpp  ENCoreGL.h  ENCoreLight.cpp  ENCoreLoader.h  ENCoreMain.h  ENCoreMap.cpp  ENCoreObjects.cpp  ENCoreObjects.h  ENCoreProcesses.cpp  ENCoreProcesses.h  ENCoreRenderer.cpp  ENCoreRenderer.h  ENCoreShaders.cpp  ENCoreShaders.h  ENCoreSound.h  ENCoreView.cpp  ENCoreWindow.cpp  ENCoreWindow.h  ENLensFlare.cpp  main.cpp
Core2/: Core.bpf  Core.bpr  ENCore2D.cpp  ENCoreCollision.cpp  ENCoreCollision.h  ENCoreDepthBuffer.cpp  ENCoreDepthBuffer.h  ENCoreGL.cpp  ENCoreGL.h  ENCoreInput.cpp  ENCoreInput.h  ENCoreLight.cpp  ENCoreLight.h  ENCoreLoader.cpp  ENCoreMain.cpp  ENCoreMain.h  ENCoreMap.cpp  ENCoreMap.h  ENCoreMath.h  ENCoreObjects.cpp  ENCoreObjects.h  ENCorePacker.h  ENCoreProcesses.cpp  ENCoreProcesses.h  ENCoreRenderer.cpp  ENCoreRenderer.h  ENCoreScript.cpp  ENCoreScript.h  ENCoreShaders.cpp  ENCoreShaders.h  ENCoreView.cpp  ENCoreView.h  ENCoreWindow.cpp  ENCoreWindow.h  main.cpp
EngineMedia/: BspTree.cpp  BspTree.h  ENASCIIMesh.cpp  ENPicture.cpp  ENVertexArray.cpp  (+13 more)
EngineSystem/: CMakeLists.txt  ENMemory.cpp  EngineMath.cpp  EngineOpenGL.cpp  EngineSystem.bpf  EngineSystem.bpr  EngineSystem.h  EngineSystem.res  EngineTypes.cpp  main.cpp
EngineSystem/include/EngineSystem/: EngineSystemDefs.h
EngineSystem/src/: EngineMath.cpp
(+413 files in other folders)
